Fix user update api in swagger
